[gd_scene load_steps=10 format=3 uid="uid://bg6jrep468hf0"]

[ext_resource type="Texture2D" uid="uid://bjjuvp2h6ltsl" path="res://TextBox-Sheet.png" id="1_0nste"]
[ext_resource type="Texture2D" uid="uid://boxqpu4ei3e53" path="res://Portrait-colonel-Sheet.png" id="2_if77y"]
[ext_resource type="Script" uid="uid://cyh0clqw057oi" path="res://dialogue_box.gd" id="3_351bv"]
[ext_resource type="Script" uid="uid://drw77iohon2r8" path="res://portrait.gd" id="3_if77y"]
[ext_resource type="Texture2D" uid="uid://divee38apuc7k" path="res://Portrait-jack-Sheet.png" id="4_351bv"]
[ext_resource type="Texture2D" uid="uid://jr8vx6sq0lyy" path="res://Portrait-boss-Sheet.png" id="5_med3p"]
[ext_resource type="Texture2D" uid="uid://cobm4opuda3mo" path="res://Portrait-narrator-Sheet.png" id="6_f71wr"]
[ext_resource type="FontFile" uid="uid://bh4nsh1ox4fec" path="res://Fonts/Silkscreen-Regular.ttf" id="7_f71wr"]

[sub_resource type="LabelSettings" id="LabelSettings_f71wr"]
font = ExtResource("7_f71wr")
font_size = 8
font_color = Color(0.417256, 0.653194, 1, 1)

[node name="Dialogue Box" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 7

[node name="Dialogue Sprite" type="TextureRect" parent="CanvasLayer"]
offset_left = 53.0
offset_top = 519.0
offset_right = 428.0
offset_bottom = 622.0
texture = ExtResource("1_0nste")

[node name="Portrait" type="TextureRect" parent="CanvasLayer/Dialogue Sprite"]
layout_mode = 0
offset_left = 15.0
offset_top = 13.0
offset_right = 65.0
offset_bottom = 90.0
texture = ExtResource("4_351bv")
script = ExtResource("3_if77y")
character_portraits = Array[Texture]([ExtResource("4_351bv"), ExtResource("2_if77y"), ExtResource("5_med3p"), ExtResource("6_f71wr")])

[node name="Text" type="Label" parent="CanvasLayer/Dialogue Sprite" node_paths=PackedStringArray("dialogue_box", "brief_timer", "blackout")]
texture_filter = 1
layout_mode = 0
offset_left = 86.0
offset_top = 17.0
offset_right = 261.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0.32197, 0.616193, 0.90412, 1)
label_settings = SubResource("LabelSettings_f71wr")
autowrap_mode = 3
script = ExtResource("3_351bv")
time_between_char = 0.05
dialogue_box = NodePath("../..")
brief_timer = NodePath("../../../BriefDelay")
blackout = NodePath("../../../CanvasLayer2/ColorRect")

[node name="Timer" type="Timer" parent="CanvasLayer/Dialogue Sprite/Text"]

[node name="BriefDelay" type="Timer" parent="."]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 6

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="dialogue_changed" from="CanvasLayer/Dialogue Sprite/Text" to="CanvasLayer/Dialogue Sprite/Portrait" method="_on_text_dialogue_changed"]
[connection signal="timeout" from="CanvasLayer/Dialogue Sprite/Text/Timer" to="CanvasLayer/Dialogue Sprite/Text" method="_on_timer_timeout"]
[connection signal="timeout" from="BriefDelay" to="CanvasLayer/Dialogue Sprite/Text" method="_on_brief_delay_timeout"]
